feat: add GMM code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -134,6 +134,8 @@ file(
   solvers/*.cpp
   utility/*.cpp
   main/*.cpp
+  dataAnalysis/*.cu
+  dataAnalysis/*.cpp
   )
 # CUDA source files
 if(CUDA_ON)
@@ -157,6 +159,8 @@ set(include_path include)
 # CUDA header files
 if(CUDA_ON)
   list(APPEND include_path include/CUDA)
+  list(APPEND include_path include/dataAnalysis)
+  list(APPEND include_path include/dataAnalysis/GMM)
   list(APPEND include_path ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
 endif()
 target_include_directories(
